@@ -78,7 +78,8 @@ $GLOBALS['TL_LANG']['tl_iso_payment_modules']['authorize_trans_type']	= array('A
 /**
  * References
  */
-$GLOBALS['TL_LANG']['tl_iso_payment_modules']['no_shipping']	= 'Orders without shipping';
+$GLOBALS['TL_LANG']['tl_iso_payment_modules']['no_shipping']		= 'Orders without shipping';
+$GLOBALS['TL_LANG']['tl_iso_payment_modules']['HOLD_FOR_ADJUST']	= array('Hold for adjustments','Transactions of this type will not be sent to the gateway until the order total has been adjusted.  Use this if you expect to have to increase order totals to account for shipping calculations or other upward fluctuations in order total.');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['AUTH_CAPTURE']			= array('Authorize and Capture', 'Transactions of this type will be sent for authorization. The transaction will be automatically picked up for settlement if approved. This is the default transaction type in the gateway. If no type is indicated when submitting transactions to the gateway, the gateway will assume that the transaction is of the type');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['AUTH_ONLY']			= array('Authorize Only', 'Transactions of this type are submitted if the merchant wishes to validate the credit card for the amount of the goods sold. If the merchant does not have goods in stock or wishes to review orders before shipping the goods, this transaction type should be submitted. The gateway will send this type of transaction to the financial institution for approval. However this transaction will not be sent for settlement. If the merchant does not act on the transaction within 30 days, the transaction will no longer be available for capture.');
 $GLOBALS['TL_LANG']['tl_iso_payment_modules']['CAPTURE_ONLY']			= array('Capture Only', 'This is a request to settle a transaction that was not submitted for authorization through the payment gateway. The gateway will accept this transaction if an authorization code is submitted. x_auth_code is a required field for CAPTURE_ONLY type transactions.');
